--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "1.0.5",
+    "@supabase/auth-helpers-nextjs": "0.8.7",
+    "@supabase/auth-helpers-react": "0.4.2",
+    "@supabase/auth-ui-react": "0.4.7",
+    "@supabase/auth-ui-shared": "0.1.8",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -19,9 +24,15 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.1",
     "react-icons": "5.0.1",
+    "stripe": "14.13.0",
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "4.5.0"
+  },
+  "devDependencies": {
+    "supabase": "1.131.5"
   }
 }
