--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.49.3",
     "react-hot-toast": "2.4.1",
     "react-icons": "5.0.1",
     "stripe": "14.13.0",
     "tailwind-merge": "2.2.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
+    "uniqid": "5.4.0",
     "zustand": "4.5.0"
   },
   "devDependencies": {
+    "@types/uniqid": "5.3.4",
     "supabase": "1.131.5"
   }
 }
